<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /* Copyright 2014 Gustavo García Pascual, Mónica Pinto and Lidia Fuentes
  ~  *
  ~  * This file is part of MO-DAGAME
  ~  * *
  ~  * MO-DAGAME is free software: you can redistribute it and/or modify
  ~  * it under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License, or
  ~  * (at your option) any later version.
  ~  *
  ~  * MO-DAGAME is distributed in the hope that it will be useful,
  ~  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  * GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License
  ~  * along with MO-DAGAME.  If not, see <http://www.gnu.org/licenses/>.
  ~  */
  -->

<resources>
    <string name="app_name">MO-DAGAME Benchmark with Offload</string>
    <string name="model_list">LIST OF FEATURE MODELS</string>
    <string name="model_summary">%1$d features and %2$d CTCs</string>
    <string name="loading_models">Loading feature models&#8230;</string>
    <string name="no_models_loaded">No feature models loaded</string>
    <string name="start_benchmark">Run benchmark</string>
    <string name="load_models">Load feature models</string>
    <string name="benchmark_in_progress">Benchmark is running&#8230;</string>
    <string name="benchmark_finished">Benchmark finished!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About MO-DAGAME</string>

    <!-- Settings -->
    <string name="settings_title_model_folder">Feature models folder</string>
    <string name="settings_title_output_folder">Output folder</string>
    <string name="settings_section_storage">Storage</string>
    <string name="settings_section_algorithm_parameters">Algorithm Parameters</string>
    <string name="settings_section_benchmark_parameters">Benchmark Parameters</string>
    <string name="settings_title_population_size">Population size</string>
    <string name="settings_title_evaluations">Maximum number of evaluations</string>
    <string name="settings_title_independent_runs">Independent runs</string>
    <string name="settings_title_baseAlgorithm">Base algorithm</string>

    <!-- About dialog -->
    <string name="about_title">MO-DAGAME with Offload</string>
    <string name="about_body"><![CDATA[
        <b>MO-DAGAME Benchmark</b><br />
        Version 1.1<br/>
        Copyright \u00A9 Gustavo G. Pascual, Mónica Pinto and Lidia Fuentes<br/>
        CAOSD Group<br />
        Universidad de M&aacute;laga (SPAIN)
        <br /><br />


        <b>MO-DAGAME</b> is a multi-objective version of DAGAME, an evolutionary algorithm for
        generating nearly-optimal feature models configurations.<br /><br />

        MO-DAGAME is implemented on top of the jMetal framework, extending some of the most
        popular multi-objective evolutionary algorithms it provides. <br /><br/>

        <b>MO-DAGAME Benchmark</b> is an Android application developed for evaluating the quality
        of the solutions and the execution time of MO-DAGAME on mobile devices. <br /><br />

        <b>Open source tools used:</b>
        <br /><br />
        <b><a href="http://jmetal.sourceforge.net/">jMetal</a></b> <br />
        <i>by J.J. Durillo, A.J. Nebro and E. Alba</i> <br />
        LGPL version 2.1 License
        <br /> <br />
        <b><a href="https://mobile.aau.at/~welmenre/res/XSRandom.java">XSRandom</a></b> <br />
        <i>by Wilfried Elmenreich</i> <br />
        LGPL version 3 License
        <br /> <br />
        <b><a href="http://labs.carrotsearch.com/hppc.html">HPPC</a></b> <br />
        <i>by Carrot Search Labs</i> <br />
        Apache 2.0 License
        <br /> <br />
        <b><a href="http://opencsv.sourceforge.net/">opencsv</a></b> <br />
        <i>by Glen Smith</i> <br />
        Apache 2.0 License
        <br /> <br />
        <b><a href="https://github.com/gabrielemariotti/cardslib">Card Library</a></b> <br/>
        <i>by Gabriele Mariotti</i> <br />
        Apache 2.0 License
        <br /> <br />
        <b><a href="https://github.com/michaelnovakjr/numberpicker">NumberPicker for Android</a></b> <br/>
        <i>by Michael Novak</i><br/>
        Apache 2.0 License
    ]]></string>
    <string name="settings_key_offload">offload_method</string>
    <string name="settings_title_offload">Perform the offload?</string>
    <string name="settings_title_offload_server_address">Offload Server Address</string>
    <string name="settings_key_offload_server_address">server_address_offload</string>
    <string name="settings_title_offload_server_port">Offload server port</string>
    <string name="settings_key_offload_server_port">offload_server_port</string>

</resources>